# crypto-trade-claude-code-weekly

./: .env.example  .gitignore  CLAUDE.md  MISSION.md  README.md  SKILL.md  config.yaml  pyproject.toml
agents/: carry.md  cio.md  momentum.md  news.md  pace_officer.md  portfolio_manager.md  reflector.md  risk_manager.md  scalper.md  sentiment.md  trader.md
futures_fund/: __init__.py  attribution.py  backtest.py  baseline.py  blended_score.py  brief.py  cells.py  config.py  consolidation.py  contracts.py  costs.py  cycle.py  cycle_io.py  episodic.py  equity_log.py  exchange.py  executor.py  exits.py  fast_loop.py  fills.py  fingerprint.py  flat_journal.py  graduation.py  hitrate.py  improvement.py  journal.py  lessons.py  live_exec.py  live_gate.py  market_data.py  memory_layout.py  metrics.py  models.py  monitor.py  neutral_book.py  notional_sizing.py  orchestration.py  orders.py  pacing.py  pending_orders.py  (+22 more)
scripts/: auto_cycle.py  blended_book_cli.py  due_check.py  fast_loop.py  flat_journal_cli.py  gate_execute_cli.py  go_live_check.py  graduation_cli.py  monitor_cli.py  monthly_review.py  preflight.py  promote_lesson_cli.py  reclassify_cli.py  record_lessons_cli.py  reflect_cli.py  reset_desk.py  retrieve_lessons_cli.py  run_cycle.py  run_loops.py  runlock_cli.py  scorecard_cli.py  scout_cli.py  screen_cli.py  self_audit_cli.py  smoke_testnet.py
tests/: test_agent_conformance.py  test_attribution.py  test_auto_cycle_ban.py  test_baseline.py  test_baseline_regime_short.py  test_blended_score.py  test_brief.py  test_cells.py  test_completed_bar.py  test_config.py  (+92 more)
(+35 files in other folders)
